# efit_to_boozer

./: .gitignore  CMakeLists.txt  EFIT_to_Boozer.mk  Makefile  README  README.Hamada_to_Boozer  README.Hamada_to_Boozer.md  README.md  pyproject.toml
PYTHON/SCR/: boozer.py
PYTHON/SRC/efit_to_boozer/: boozer.py
PYTHON/tests/: test_boozer.py
SRC/: bdivfree_coul.f90  efit_to_boozer.f90  efit_to_boozer_mod.f90  efit_to_boozer_python.f90  field_divB0.f90  field_line_integration_for_Boozer.f90  hamada_to_boozer.f90  odeint_allroutines.f  odeint_allroutines.f90  old.field_divB0.f90  rhs.f90  spline_and_interpolate_magdata.f90
python/: Makefile
python/efit_to_boozer/: boozer.py
python/tests/: test_boozer.py
