[build-system]
requires = ["scikit-build-core", "numpy"]
build-backend = "scikit_build_core.build"

[project]
name = "efit_to_boozer"
version = "0.0.3"
dependencies = ["numpy"]
classifiers = [
    "License :: OSI Approved :: MIT License",
]

[tool.scikit-build]
build-dir = "build"
cmake.verbose = true
