[build-system]
requires = ["scikit-build-core", "numpy"]
build-backend = "scikit_build_core.build"

[project]
name = "efit_to_boozer"
version = "0.0.3"
dependencies = ["numpy"]
classifiers = [
    "License :: OSI Approved :: MIT License",
]

[tool.setuptools.packages.find]
where = ["PYTHON/SRC"]

[tool.scikit-build]
build-dir = "build"
build.verbose = true
cmake.define.CMAKE_CACHE_DIR = "build"
cmake.define.CMAKE_PRESET = "default"
